--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -1,10 +1,41 @@
-.homeContainer{
+.homeContainer {
   display: flex;
   flex-direction: column;
   align-items: center;
 }
 
-.buttons{
-  width:200px;
-  height:50px;
+.headBox {
+  display: flex;
+  width: 100%;
+  position: relative;
+  top: 40px;
+  padding: 0px 40px 0px 40px;
+}
+
+.loginBox {
+  display: flex;
+  position: absolute;
+  right: 47px;
+}
+
+.buttons {
+  width: fit-content;
+  height: fit-content;
+  padding: 10px 20px;
+  border-radius: 20px;
+  gap: 10px;
+  color: white;
+  font-size: 20px;
+}
+
+.loginButton {
+  border: 1px solid #384084;
+  color: #000;
+  margin-right: 20px;
+}
+
+.signupButton {
+  background-color: #384084;
+  border: 1px solid #fff;
+  color: white;
 }
