--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -20,10 +20,9 @@
 
 .buttons {
   width: fit-content;
-  height: fit-content;
+  height: 44px;
   padding: 10px 20px;
   border-radius: 20px;
-  gap: 10px;
   color: white;
   font-size: 20px;
 }
@@ -32,6 +31,7 @@
   border: 1px solid #384084;
   color: #000;
   margin-right: 20px;
+  background-color: #fff;
 }
 
 .signupButton {
