--- a/styles/Home.module.css
+++ b/styles/Home.module.css
@@ -18,6 +18,12 @@
   right: 47px;
 }
 
+.title {
+  color: #242957;
+  font-size: 48px;
+  margin-top: 125px;
+}
+
 .buttons {
   width: fit-content;
   height: 44px;
@@ -38,4 +44,31 @@
   background-color: #384084;
   border: 1px solid #fff;
   color: white;
+}
+
+.voteBox {
+  margin-top: 82px;
+  display: flex;
+  width: 948px;
+  justify-content: space-between;
+}
+
+.voteButton {
+  width: 394px;
+  height: 406px;
+  display: flex;
+  border-radius: 20px;
+  border: 3px solid #384084;
+  background: #fff;
+  justify-content: center;
+  align-items: center;
+  font-size: 48px;
+  color: #242957;
+  font-weight: 600;
+  line-height: 166%;
+}
+
+.voteButton:hover {
+  background: #384084;
+  color: #fff;
 }
