--- a/styles/Result.module.css
+++ b/styles/Result.module.css
@@ -21,13 +21,14 @@
 .resultBox {
   display: flex;
   align-items: center;
-  justify-content: space-around;
+  justify-content: space-between;
   width: 492px;
   height: 85px;
   border-radius: 20px;
   border: 3px solid #384084;
   background-color: #fff;
   margin: 0 9.5px 19px 9.5px;
+  padding: 0 48px 0px 20px;
 }
 
 .numberBox {
@@ -57,7 +58,7 @@
 }
 
 .teamName {
-  width: 100px;
+  width: fit-content;
   display: flex;
   color: #000;
   font-size: 20px;
@@ -71,7 +72,6 @@
   color: #384084;
   font-size: 40px;
   font-weight: 600;
-  margin-right: 10px;
 }
 
 .returnButton {
