feat: result page router연결

--- a/styles/Result.module.css
+++ b/styles/Result.module.css
@@ -80,7 +80,7 @@
   border-radius: 20px;
   border: 3px solid #384084;
   background: #384084;
-  margin-top: 74px;
+  margin: 74px 0 120px 0;
 
   color: #fffdfd;
   font-size: 30px;
