--- a/styles/Part.module.css
+++ b/styles/Part.module.css
@@ -61,6 +61,14 @@
   margin-top: 8px;
 }
 
+.clicked {
+  background-color: #384084;
+}
+
+.clickedText {
+  color: #fff;
+}
+
 .resultButton {
   display: flex;
   justify-content: center;
