style: 가장 표 많이 받은 결과 style변경

--- a/styles/Result.module.css
+++ b/styles/Result.module.css
@@ -73,6 +73,16 @@
   font-weight: 600;
 }
 
+.win1 {
+  background-color: #384084;
+  color: #fff;
+}
+
+.win2 {
+  color: #384084;
+  background-color: #fff;
+}
+
 .returnButton {
   width: 291px;
   height: 82px;
